# estadistica-especializacion

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: Estadistica_Inferencial_Diabetes.pptx  ML Sesión 3 Aprendizaje Supervisado.pptx  ML Sesión 4 Aprendizaje no Supervisado.pptx  guia_exposicion_diabetes_inferencial.md  guia_exposicion_retail.md
notebooks/: 01-titanic-limpieza-datos.ipynb  02-titanic-usando-src.ipynb  04-diabetes-usando-src.ipynb  05-diabetes-inferencial.ipynb  06-retail-analisis-completo.ipynb  Semana_3_Estadística_Inferencial_Julián_Hoyos_.ipynb  Taller_1_Diabetes.ipynb  Taller_2_Limpieza.ipynb  Taller_3_diabetes_inferencial.ipynb  Taller_4_retail_analisis_completo.ipynb  semana_3_regresion_logist.ipynb  sesion_3_ml_plantilla_diabetes_regresion.ipynb  sesion_3_ml_plantilla_make_regresion.ipynb  sesion_4_ml_plantilla_kmeans.ipynb  sesión_3_ml_plantilla_clasificacion_iris.ipynb
src/estadistica/: __init__.py  cleaning.py  data.py  paths.py  transforms.py
