[project]
name = "estadistica"
version = "0.1.0"
description = "Proyecto de análisis de datos y estadística"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/estadistica"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.8",
    "notebook>=7.5.7",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "data", "reports"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

